@@ -10,6 +10,7 @@ Document Module | search
 Document Module | sort_on
 Document Module | view
 Document Module | webdav
+Drawing | bookmark
 Drawing | convert
 Drawing | create_snapshot
 Drawing | download
@@ -31,6 +32,7 @@ Drawing | related_document
 Drawing | view
 Drawing | web_view
 External Source Module | view
+File | bookmark
 File | file_upload
 File | jump_to_all_related
 File | jump_to_predecessor
@@ -43,6 +45,7 @@ File | related_document
 Image Module | list_ui
 Image Module | sort_on
 Image Module | view
+Image | bookmark
 Image | export
 Image | file_upload
 Image | jump_to_all_related
@@ -53,6 +56,7 @@ Image | jump_to_successor
 Image | jump_to_wiki_predecessor
 Image | local_permission
 Image | related_document
+PDF | bookmark
 PDF | download
 PDF | file_upload
 PDF | html_view
@@ -68,6 +72,7 @@ PDF | related_document
 PDF | view
 PDF | web_view
 Preference | dms_preferences
+Presentation | bookmark
 Presentation | convert
 Presentation | create_snapshot
 Presentation | download
@@ -91,6 +96,7 @@ Presentation | web_view
 RSS Feed | crawl
 RSS Feed | crawled_content
 RSS Feed | view
+Spreadsheet | bookmark
 Spreadsheet | convert
 Spreadsheet | create_snapshot
 Spreadsheet | download
@@ -111,6 +117,7 @@ Spreadsheet | print
 Spreadsheet | related_document
 Spreadsheet | view
 Spreadsheet | web_view
+Text | bookmark
 Text | create_snapshot
 Text | download
 Text | download_ooo
