@@ -1,4 +1,7 @@
 2007-11-26 Yusei
+* Add bookmark action for document type portal types.
+
+2007-11-23 Yusei
 * Add bookmark feature for km.
 
 2007-11-21 Yusei
